--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,15 +4,30 @@
                 android:layout_width="match_parent"
               android:orientation="vertical"
                 android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-                tools:context=".activity.main.fragment.search.SearchFragment">
-    <EditText
-            android:id="@+id/search_bar"
+                tools:context=".activities.main.fragment.search.SearchFragment">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:background="#b4b4b5"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:background="#b4b4b5"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"/>
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+    <EditText
+            android:id="@+id/edt_search"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+    <Button android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:id="@+id/btn_search"
+            android:background="@drawable/ic_tab"
+    />
+    </LinearLayout>
+
     <android.support.v4.widget.NestedScrollView
             android:id="@+id/search_result"
             android:layout_width="match_parent"
@@ -38,7 +53,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 <android.support.v7.widget.RecyclerView
-                        android:id="@+id/ly_artist_list"
+                        android:id="@+id/recycler_view_artist"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
@@ -74,7 +89,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 <android.support.v7.widget.RecyclerView
-                        android:id="@+id/ly_concert_list"
+                        android:id="@+id/recycler_view_concert"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
@@ -102,16 +117,17 @@
             android:id="@+id/search_result_fail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
             android:orientation="vertical">
         <TextView
+                android:id="@+id/tv_result_no"
                 android:layout_gravity="center"
-                android:text="'아무말'에 대한 검색 결과가 없습니다'"
+                android:text="@string/txt_result_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <TextView
+                android:id="@+id/tv_result_add"
                 android:layout_gravity="center"
-                android:text="'아무말..' 아티스트/콘서트 추가요청하기"
+                android:text="@string/txt_result_add"
                 android:background="#b4b4b5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
