--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".activities.main.fragment.mypage.MyPageFragment">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+                tools:context=".activities.main.fragment.mypage.MyPageFragment">
 
         <LinearLayout
                 android:layout_marginHorizontal="16dp"
@@ -22,51 +22,199 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 <ImageView
+                        android:id="@+id/btn_setting"
                         android:layout_marginLeft="170dp"
                         android:src="@drawable/ic_account_circle"
                         android:layout_width="46dp"
                         android:layout_height="46dp"/>
             </LinearLayout>
 
-
-            <TextView
-                    android:text="내 티켓"
-                    android:textSize="17sp"
-                    android:textColor="#010101"
+        <android.support.v4.widget.NestedScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
 
-            <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_view_ticket"
-                    android:layout_marginTop="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                <TextView
+                        android:text="내 티켓"
+                        android:textSize="17sp"
+                        android:textColor="#010101"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
-            </android.support.v7.widget.RecyclerView>
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_view_ticket"
+                        android:layout_marginTop="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        app:layoutManager="android.support.v7.widget.LinearLayoutManager">
 
-            <TextView
-                    android:layout_marginTop="55.7dp"
-                    android:text="결제 내역"
-                    android:textSize="17sp"
-                    android:textColor="#010101"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_view_pay"
-                    android:layout_marginTop="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                </android.support.v7.widget.RecyclerView>
 
-            </android.support.v7.widget.RecyclerView>
-            <TextView
-                    android:text="전체보기"
-                    android:id="@+id/btn_more"
-                    android:textSize="12sp"
-                    android:textColor="#666666"
-                    android:layout_marginTop="6.8dp"
-                    android:layout_marginLeft="304.8dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="55.7dp"
+                        android:text="결제 관리"
+                        android:textSize="17sp"
+                        android:textColor="#010101"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                <LinearLayout
+                        android:layout_marginTop="20dp"
+                        android:orientation="vertical"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                    <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                        <LinearLayout
+                                android:orientation="vertical"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+                            <ImageView
+                                    android:src="@drawable/ic_account_circle"
+                                    android:layout_width="64dp"
+                                    android:layout_height="64dp"/>
+                            <TextView
+                                    android:text="적립금"
+                                    android:textColor="#000000"
+                                    android:layout_gravity="center_horizontal"
+                                    android:textSize="12sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                                android:orientation="vertical"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+                            <ImageView
+                                    android:src="@drawable/ic_account_circle"
+                                    android:layout_width="64dp"
+                                    android:layout_height="64dp"/>
+                            <TextView
+                                    android:text="쿠폰"
+                                    android:textColor="#000000"
+                                    android:layout_gravity="center_horizontal"
+                                    android:textSize="12sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                                android:orientation="vertical"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+                            <ImageView
+                                    android:src="@drawable/ic_account_circle"
+                                    android:layout_width="64dp"
+                                    android:layout_height="64dp"/>
+                            <TextView
+                                    android:text="예매확인/취소"
+                                    android:textColor="#000000"
+                                    android:layout_gravity="center_horizontal"
+                                    android:textSize="12sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                                android:orientation="vertical"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+                            <ImageView
+                                    android:src="@drawable/ic_account_circle"
+                                    android:layout_width="64dp"
+                                    android:layout_height="64dp"/>
+                            <TextView
+                                    android:text="리뷰"
+                                    android:textColor="#000000"
+                                    android:layout_gravity="center_horizontal"
+                                    android:textSize="12sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                    <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                        <LinearLayout
+                                android:orientation="vertical"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+                            <ImageView
+                                    android:src="@drawable/ic_account_circle"
+                                    android:layout_width="64dp"
+                                    android:layout_height="64dp"/>
+                            <TextView
+                                    android:text="배송지 관리"
+                                    android:textColor="#000000"
+                                    android:layout_gravity="center_horizontal"
+                                    android:textSize="12sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                                android:orientation="vertical"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+                            <ImageView
+                                    android:src="@drawable/ic_account_circle"
+                                    android:layout_width="64dp"
+                                    android:layout_height="64dp"/>
+                            <TextView
+                                    android:text="주문/배송조회"
+                                    android:textColor="#000000"
+                                    android:layout_gravity="center_horizontal"
+                                    android:textSize="12sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                                android:orientation="vertical"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+                            <ImageView
+                                    android:src="@drawable/ic_account_circle"
+                                    android:layout_width="64dp"
+                                    android:layout_height="64dp"/>
+                            <TextView
+                                    android:text="결제수단"
+                                    android:textColor="#000000"
+                                    android:layout_gravity="center_horizontal"
+                                    android:textSize="12sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                                android:orientation="vertical"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+                            <ImageView
+                                    android:src="@drawable/ic_account_circle"
+                                    android:layout_width="64dp"
+                                    android:layout_height="64dp"/>
+                            <TextView
+                                    android:text="고객센터"
+                                    android:textColor="#000000"
+                                    android:layout_gravity="center_horizontal"
+                                    android:textSize="12sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+
+        </android.support.v4.widget.NestedScrollView>
+
+
+
 
         </LinearLayout>
 </RelativeLayout>
